Fixed bug with `$file->errors` from last commit. Improved interface by adding message with list of files that failed in last attempt.

--- a/assets/default.css
+++ b/assets/default.css
@@ -6,3 +6,10 @@
 .group > a.no-section {
 	float: right;
 }
+
+.failed.files div ul {
+	display: none;
+}
+.failed.files div:hover ul {
+	display: block;
+}
