Slight tweaks to min-height for the SSM bridge

--- a/assets/bulkimporter.publish.css
+++ b/assets/bulkimporter.publish.css
@@ -7,7 +7,7 @@
  * @source: http://github.com/brendo/bulkimporter
  */
 
-div.field-subsectionmanager div.stage li {
+div.field-subsectionmanager div.stage li:not(.empty, .bulkimporter) {
 	min-height: 53px;
 }
 
